Renew version in deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
           npm run build
 
       - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@4.5.0  # use the latest version
+        uses: JamesIves/github-pages-deploy-action@v4  # use the latest version
         with:
           repository: AdAstraAbyssoque/repository.github.io  # replace with your username and repository
           branch: main  # the branch where your site will be hosted, usually it's "main" for user.github.io repo
