--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,12 +28,11 @@ jobs:
       - name: Install and Build 🔧
         run: |
           npm ci
-          npm run build
-
+          npm run docs:build
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4  # use the latest version
         with:
           repository: AdAstraAbyssoque/repository.github.io  # replace with your username and repository
           branch: main  # the branch where your site will be hosted, usually it's "main" for user.github.io repo
-          folder: .vitepress/dist  # the folder where your site is stored
+          folder: docs/.vitepress/dist  # change ".vitepress/dist" to "docs/.vitepress/dist"
           clean: true  # automatically remove old files
