--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,38 +1,26 @@
-name: Build and Deploy
+name: Deploy
+
 on:
   push:
     branches:
-      - main  # replace with the name of your default branch if it's not "main"
+      - main
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout 🛎️
-        uses: actions/checkout@v4.1.1  # use the latest version
-
-      - name: Setup Node.js environment 💻
-        uses: actions/setup-node@v4.0.2  # use the latest version
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: '14'
+          node-version: 16
+      - run: npm i pnpm -g
+      - run: pnpm install --frozen-lockfile
 
-      - name: Cache dependencies 🗄️
-        uses: actions/cache@v4.0.1  # use the latest version
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-            ${{ runner.os }}-
+      - name: Build
+        run: pnpm docs:build
 
-      - name: Install and Build 🔧
-        run: |
-          npm ci
-          npm run docs:build
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@v4  # use the latest version
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v4
         with:
-          repository: AdAstraAbyssoque/AdAstraAbyssoque.github.io  # replace with your username and repository
-          branch: main  # the branch where your site will be hosted, usually it's "main" for user.github.io repo
-          folder: docs/.vitepress/dist  # change ".vitepress/dist" to "docs/.vitepress/dist"
-          clean: true  # automatically remove old files
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: docs/.vitepress/dist
