--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,11 +13,11 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 16
-      - run: npm i pnpm -g
-      - run: pnpm install --frozen-lockfile
+      - run: npm install -g yarn
+      - run: yarn install --frozen-lockfile
 
       - name: Build
-        run: pnpm docs:build
+        run: yarn docs:build
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
