--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
           yarn docs:build  # change "yarn run build" to "yarn docs:build"
 
       - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@v4  # use the latest version
+        uses: JamesIves/github-pages-deploy-action@v4  
         with:
           repository-name: AdAstraAbyssoque/AdAstraAbyssoque.github.io  # replace with your username and repository
           branch: main  # the branch where your site will be hosted, usually it's "main" for user.github.io repo
