--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,3 +37,4 @@ jobs:
           branch: main  # the branch where your site will be hosted, usually it's "main" for user.github.io repo
           folder: docs/.vitepress/dist  # change ".vitepress/dist" to "docs/.vitepress/dist"
           clean: true  # automatically remove old files
+          token: ${{ secrets.WEBSITETOKEN }}
